# cot-basic-auth

./: Cargo.toml  README.md
config/: dev.toml
src/: auth.rs  forms.rs  main.rs  migrations.rs  utils.rs
src/forms/: forgot_password.rs  login.rs  signup.rs
src/migrations/: m_0001_initial.rs
static/css/: login.css
templates/: forgot_password.html  forgot_password_confirm.html  home.html  login.html  signup.html
