[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14"
cot = { git  = "https://github.com/cot-rs/cot.git", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
async-trait = "0.1.88"
chrono = "0.4.40"
num-bigint = "0.4.6"
num-traits = "0.2.19"
hex = "0.4.3"
base64 = "0.22.1"
thiserror = "2.0.11"